src/ui/less/components/collectionQuery.less
/*
 * Collection Query
 */
.collection-query {
  position: relative;
  height: 100%;
  width: 100%;
  overflow-y: hidden;
  display: flex;
  flex-direction: column;
  .collection-query-nav {
    flex-basis: 55px;
    flex-grow: 0;
    flex-shrink: 0;
    .collection-info {
      p {
        margin: 0;
        padding: 0;
        float: left;
        margin-right: 15px;
        &:last-child {
          margin-right: 0;
        }
      }
    }
    .query-btn-list {
      margin: 0 10px 0 0;
      padding: 0;
      .form-control {
        display: inline-block;
        min-width: 60px;
        margin-right: 5px;
        background: darken(@theme-bg, 20%);
        border-color: lighten(@theme-bg, 10%);
        color: @theme-text-color;
      }
      .btn {
        display: inline-block;
        border-radius: @border-radius-base;
        .number-input {
          width: 50px;
        }
        &.active {

        }
      }
    }
  }
  .query-error {
    margin-top: 15px;
  }
  .query-form {
    min-height: 75px;
    .query-input {
      border-radius: 4px;
      padding: 2px;
      position: relative;
      border: none;
      background: @theme-query-editor-bg;
      border-color: @theme-query-editor-border-color;
    }
  }
  .query-results {
    margin-top: 20px;
    position: relative;
    overflow-y: auto;
    .query-results-inner {
      position: relative;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;
      overflow-y: auto;
    }
    .result {
      border: 1px solid @theme-query-result-json-border-color;
      padding: 10px;
      margin-bottom: 10px;
      border-radius: @border-radius-base;
      background: @theme-query-result-json-bg;
      pre {
        padding: 0;
        margin: 0;
        background: transparent;
        border: none;
        border-radius: 0;
        color: @theme-query-result-json-color;
      }
    }
    .list-view {

    }
    .raw-view {
      .result {
        position: relative;
        overflow: hidden;
        .menu {
          .transition-property('top');
          .transition-duration(.35s);
          .transition-timing-function(ease);
          position: absolute;
          top: -32px;
          right: -1px;
          border-top-right-radius: @border-radius-base;
          border: 1px solid @theme-query-result-json-border-color;
          list-style: none;
          li {
            float: left;
            padding: 5px;
            width: 30px;
            height: 30px;
            text-align: center;
            cursor: pointer;
            &:hover {
              color: @theme-brand-primary;
            }
          }
        }
        &:hover {
          border: 1px solid lighten(@theme-query-result-json-border-color, 30%);
          .menu {
            top: -1px;
            border: 1px solid lighten(@theme-query-result-json-border-color, 30%);
          }
        }
      }
    }
    .key-value-view {

    }
  }
}

